--- a/Site/Public/css/style.scss
+++ b/Site/Public/css/style.scss
@@ -7,10 +7,10 @@
     outline: 0;
         }
         body{
-            background-color: $normal-pink;
+            background-color: #dfdfdf;
         }
         .bg-nav{
-            background-color: $normal-blue;
+            background-color: $normal-pink;
             height: 90px;
         }
         .container{
@@ -20,24 +20,28 @@
         }
         .nav-left{
             display: flex;            
-            margin-top: 30px;
-            margin-left: 78px;
+
+            margin-left: 40px;
 
             img{
-                width: 100px;
-                height: 85px;
+                width: 110px;
+                height: 95px;
             }
         }
         .nav-right{
             display: flex;
             margin-top: 30px;
             margin-right: 40px;
+
+            a{
+                font-size: 20px;
+                color: $normal-blue;
+                margin-right: 10px;
+            }
         }
-        .nav-right .txt{
-            margin-right: 10px;
-        }
+
         .banner{
-            height: 55  px;
+            height: 55px;
             background-color: #dfdfdf;
             display: flex;
             align-items: center;
@@ -51,10 +55,72 @@
             img{
                 width: 1300px;
                 height: 1000px;
+                border-radius: 10px;
             }
         }
-        .sobre-nos
+        .banner2{
 
+            height: 55  px;
+            background-color: #dfdfdf;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 28px;
+        }
+        .sobre-nos{
+            font-family: "Roboto Slab", serif;
+            font-optical-sizing: auto;
+            font-weight: 600;
+            font-style: normal;
+            margin-top: 10px;
+            background-color: $normal-pink;
+            color: $normal-blue;
+            display: flex;
+            justify-content: center;
+            max-width: 1300px;
+            margin-left: 78px;
+            font-size: 40px;
+            border-radius: 18px;
+            height: 600px;
+        }  
+        .bg-footer{
+            background-color: #0f0f0f;
+            color: #dfdfdf;
+
+            .footer{
+                margin-top: 20px;
+                display: flex;
+                justify-content: center;
+                height: 200px;
+            }
+
+            .linha{
+                width: 90%;
+                height: 2px;
+                background-color: $normal-pink;
+                margin-top: 20px;
+                margin-bottom: 20px;
+                margin-left: 5%;
+            }
+            .txt-footer{
+                display: flex;
+                justify-content: center;
+            }
+
+            .barra{
+                height: 200px;
+                width: 3px;
+                background-color: $normal-pink;
+            }
+
+            .institucional{
+                margin-right: 330px;
+            }
+
+            .redes{
+                margin-left: 330px;
+            }
+        }
 
         a{
             color: #dfdfdf;
