--- a/Site/Public/css/style.scss
+++ b/Site/Public/css/style.scss
@@ -120,6 +120,13 @@
             .redes{
                 margin-left: 330px;
             }
+            .footer-icons{
+                margin-top: 20px;
+                
+                i{
+                    width: 1000px;
+                }
+            }
         }
 
         a{
