--- a/Site/Public/css/style.scss
+++ b/Site/Public/css/style.scss
@@ -15,6 +15,7 @@
             position: fixed;
             z-index: 1;
             padding-inline: 16px;
+            top: 0;
           }
           .container {
             display: flex;
@@ -47,10 +48,11 @@
             justify-content: center;
             font-size: 28px;
         }
+
         .img1{
             display: flex;
             justify-content: center;
-            margin-top: 10px;
+            margin-top: 150px;
             img{
                 width: 1300px;
                 height: 1000px;
